k8s/apps/open-webui/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui-internal
  namespace: apps
spec:
  parentRefs:
    - name: envoy-internal
      namespace: envoy-gateway-system
      sectionName: websecure
  hostnames:
    - open-webui.envoy.grendel71.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: open-webui
          port: 80
